# law-agent

./: .env  .env.example  .gitignore  ADVANCED_PIPELINE_SUMMARY.md  ANALYTICS_SYSTEM_README.md  COMPLETE_API_DOCUMENTATION.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_README.md  DOCUMENT_PROCESSING_README.md  FINAL_INTEGRATION_SUMMARY.md  FREE_AI_SETUP_GUIDE.md  FRONTEND_DEPLOYMENT_CHECKLIST.md  GET_GROK_API_KEY.md  GITHUB_SECRETS_SETUP.md  GROK_AI_SETUP.md  GROK_INTEGRATION_SUMMARY.md  INTEGRATED_LAW_AGENT_README.md  PORT_CONFLICT_SOLUTIONS.md  README.md  README_STARTUP.md  SOLUTION_SUMMARY.md  Start-LawAgent.ps1  VERCEL_DEPLOYMENT_GUIDE.md  advanced_rl_verification.py  advanced_rl_verification_results.json  analytics_api.py  analytics_collector.py  analytics_database.py  analytics_engine.py  auto_start_redis.py  chat_interface.html  check_api_endpoints.py  cleanup_and_start.py  cleanup_disk.py  comprehensive_system_check.py  comprehensive_system_check_results.json  constitutional_articles.json  court_processes.json  demo_perfect_agent.py  (+113 more)
.github/workflows/: ci-cd.yml
demo_documents/: employment_contract.txt  employment_contract_analysis.json  legal_notice.txt  legal_notice_analysis.json  rental_agreement.txt  rental_agreement_analysis.json
docker/: Dockerfile.analytics  Dockerfile.api  Dockerfile.documents
environments/: .env.development  .env.production  .env.staging
law-agent-frontend/: .env  .env.example  .env.production  .eslintrc.json  budget.json  lighthouserc.json  package-lock.json  package.json  tailwind.config.js  vercel.json
law-agent-frontend/public/: index.html  simple-law-interface.html
law-agent-frontend/src/: App.js  index.css
law-agent-frontend/src/components/: AdvancedFeedback.css  AdvancedFeedback.tsx  AnalyticsDashboard.tsx  ChatInterface.tsx  DocumentUpload.tsx  LawAgentApp.css  LawAgentApp.tsx  LawAgentInterface.tsx  LegalGlossary.tsx  LegalTimeline.tsx  LoadingScreen.tsx  ResponseModule.tsx
law-agent-frontend/src/components/3D/: CourtProcessFlow3D.tsx  CourtVisualization.tsx  JurisdictionalMap.tsx  JurisdictionalMap3D.tsx  Perfect3DLegalVisualization.tsx  TalkingAvatar.tsx
law-agent-frontend/src/components/ui/: tabs.tsx
law-agent-frontend/src/services/: analyticsService.ts  authService.ts
law-agent-frontend/src/types/: index.ts  react-three-fiber.d.ts
law_agent/: __init__.py  start_fixed_server.py
law_agent/ai/: __init__.py  advanced_feedback_system.py  advanced_rl_policy.py  advanced_rl_system.py  case_law_analyzer.py  enhanced_rl_policy.py  free_huggingface_engine.py  grok_enhanced_agent.py  grok_legal_engine.py  law_agent.code-workspace  legal_reasoning.py  rl_model_trainer.py  system_optimizer.py
law_agent/api/: __init__.py  feedback_endpoints.py  main.py  middleware.py  perfect_feedback_api.py  routes.py
law_agent/core/: __init__.py  agent.py  config.py  dependencies.py  memory.py  state.py
law_agent/data/: article.json  comprehensive_articles.json  crime_data.json
law_agent/legal/: __init__.py  advanced_constitutional_advisor.py  advanced_glossary.py  advanced_ml_classifier.py  advanced_route_engine.py  constitutional_advisor.py  domain_classifier.py  enhanced_domain_classifier.py  glossary.py  route_mapper.py
law_agent/models/: perfect_rl_policy.pkl
law_agent/rl/: __init__.py  environment.py  perfect_rl_system.py  policy.py
law_agent/tests/: __init__.py  test_agent.py  test_api.py
law_agent/ui/: __init__.py  web_interface.py
law_agent/ui/templates/: chat.html  index.html
law_agent/utils/: __init__.py  data_processing.py  helpers.py  performance.py
redis/: dump.rdb
redis_server/: dump.rdb  redis.conf
scripts/: deploy.sh  test-deployment.sh
supabase/migrations/: 001_initial_schema.sql
